CJAL- SE agregan roles para Historico de ventas

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
@@ -440,6 +440,8 @@
                                                         <th>Borrar Mantenimiento</th>
                                                         <th>Registrar Recarga Combustible</th>
                                                         <th>Borrar Recarga Combustible</th>
+                                                        <th>HV Carga Informacion</th>
+                                                        <th>Historico Ventas</th>
                                                         <th>Acciones</th>
                                                     </tr>
                                                 </thead>
