--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolMovilVenta.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolMovilVenta.cshtml
@@ -109,6 +109,8 @@
 @Html.HiddenFor(m => m.CobranzaFacturar)
 @Html.HiddenFor(m => m.FacturasVerFacturas)
 @Html.HiddenFor(m => m.FacturasFacturar)
+@Html.HiddenFor(m => m.HVCargaInformacion)
+@Html.HiddenFor(m => m.HistoricoVentas)
 <tr>
     <td>@Model.NombreRol </td>
     <td>@Html.CheckBoxFor(m => m.AppDisposicionEfectivo)</td>
