--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolSistemaVenta.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolSistemaVenta.cshtml
@@ -104,6 +104,8 @@
 @Html.HiddenFor(m => m.ETBorrarMantenimiento)
 @Html.HiddenFor(m => m.ETRegistrarRecargaCombustible)
 @Html.HiddenFor(m => m.ETBorrarRecargaCombustible)
+@Html.HiddenFor(m => m.HVCargaInformacion)
+@Html.HiddenFor(m => m.HistoricoVentas)
  
 <tr>
     <td>@Model.NombreRol </td>
