--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolTransporte.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolTransporte.cshtml
@@ -115,6 +115,9 @@
     <td>@Html.CheckBoxFor(m => m.ETBorrarMantenimiento)</td>
     <td>@Html.CheckBoxFor(m => m.ETRegistrarRecargaCombustible)</td>
     <td>@Html.CheckBoxFor(m => m.ETBorrarRecargaCombustible)</td>
+    <td>@Html.CheckBoxFor(m => m.HVCargaInformacion)</td>
+    <td>@Html.CheckBoxFor(m => m.HistoricoVentas)</td>
+
     <td>
         <a ID="lbEdit" href="@Url.Action("ActualizaNombreRol", "Roles", new { id = Model.IdRol })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="material-icons">edit</i>
