AMN-Punto de Venta

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/punto_venta_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/punto_venta_item.xml
@@ -63,14 +63,13 @@
                 app:layout_row="3"
                 tools:ignore="Autofill,LabelFor"
                 tools:targetApi="P"
-                android:hint="13.66"
                 />
 
             <TextView
                 android:id="@+id/PuntoVentaGasListActivityTituloPrecioporLitro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Precio por Litro"
+                android:text="Precio Unitario"
                 android:textAlignment="center"
                 android:textSize="14sp"
                 app:layout_column="2"
