--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
@@ -350,7 +350,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <address>
-                                        <strong>Top 5 Deudores mas valiosos</strong>
+                                        <strong> Top 5: Mayor monto de adeudo</strong>
                                     </address>
                                 </div>
                             </div>
