CJAL Merge version

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
@@ -376,6 +376,8 @@
                                                         <th>Consultar Remanente</th>
                                                         <th>Facturas Ver Factura</th>
                                                         <th>Facturas Facturar</th>
+                                                        <th>Consultar Caja General</th>
+                                                        <th>Modificar Caja General</th>
                                                         <th>Acciones</th>
                                                     </tr>
                                                 </thead>
