--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolMovilVenta.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolMovilVenta.cshtml
@@ -111,6 +111,8 @@
 @Html.HiddenFor(m => m.FacturasFacturar)
 @Html.HiddenFor(m => m.HVCargaInformacion)
 @Html.HiddenFor(m => m.HistoricoVentas)
+@Html.HiddenFor(m => mCatLiquidarCajaGeneral)
+@Html.HiddenFor(m => mCatConsultarCajaGeneral)
 <tr>
     <td>@Model.NombreRol </td>
     <td>@Html.CheckBoxFor(m => m.AppDisposicionEfectivo)</td>
