CJAL- MERGE version

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolCompras.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolCompras.cshtml
@@ -118,8 +118,8 @@
 @Html.HiddenFor(m => m.FacturasFacturar)
 @Html.HiddenFor(m => m.HVCargaInformacion)
 @Html.HiddenFor(m => m.HistoricoVentas)
-@Html.HiddenFor(m => mCatLiquidarCajaGeneral)
-@Html.HiddenFor(m => mCatConsultarCajaGeneral)
+@Html.HiddenFor(m => m.CatLiquidarCajaGeneral)
+@Html.HiddenFor(m => m.CatConsultarCajaGeneral)
 <tr>
     <td>@Model.NombreRol </td>
     <td>@Html.CheckBoxFor(m => m.CompraVerOCompra)</td>
