--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolSistemaVenta.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolSistemaVenta.cshtml
@@ -122,8 +122,8 @@
     <td>@Html.CheckBoxFor(m => m.ConsultarRemanenteGeneral)</td>
     <td>@Html.CheckBoxFor(m => m.FacturasVerFacturas)</td>
     <td>@Html.CheckBoxFor(m => m.FacturasFacturar)</td>
-    <td>@Html.CheckBoxFor(m => mCatLiquidarCajaGeneral)</td>
-    <td>@Html.CheckBoxFor(m => mCatConsultarCajaGeneral)</td>
+    <td>@Html.CheckBoxFor(m => m.CatLiquidarCajaGeneral)</td>
+    <td>@Html.CheckBoxFor(m => m.CatConsultarCajaGeneral)</td>
 <td>
         <a ID="lbEdit" href="@Url.Action("ActualizaNombreRol", "Roles", new { id = Model.IdRol })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="material-icons">edit</i>
