--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolTransporte.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolTransporte.cshtml
@@ -104,8 +104,8 @@
 @Html.HiddenFor(m => m.RequisicionAutorizar)
 @Html.HiddenFor(m => m.FacturasVerFacturas)
 @Html.HiddenFor(m => m.FacturasFacturar)
-@Html.HiddenFor(m => mCatLiquidarCajaGeneral)
-@Html.HiddenFor(m => mCatConsultarCajaGeneral)
+@Html.HiddenFor(m => m.CatLiquidarCajaGeneral)
+@Html.HiddenFor(m => m.CatConsultarCajaGeneral)
 <tr>
     <td>@Model.NombreRol </td>
     <td>@Html.CheckBoxFor(m => m.ETRegistrarParqueVehicular)</td>
