AMN-correcciones app
Precio cilindro 30.000 camioneta, 
prellenado RFC generico clientes
IVA 1.6

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_registro_cliente.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_registro_cliente.xml
@@ -101,6 +101,7 @@
                     android:hint="@string/rfc"
                     android:importantForAutofill="no"
                     android:inputType="text"
+                    android:text="XAXX010101000"
                     android:singleLine="true"
                     android:textSize="18sp"
                     android:maxLength="13"
