--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
@@ -167,12 +167,11 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
-                    android:text="Sagas v1.0.20190620"
+                    android:text="Sagas v1.0.20190620.B"
                     app:layout_constraintBottom_toTopOf="@+id/textView18"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
 
