JSA - Correcciones Generales

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarClienteLoc.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarClienteLoc.cshtml
@@ -230,7 +230,7 @@
                                         <div class="form-group">
                                             <div>
                                                 <label for="txtNume">
-                                                    Referencia Google Maps:*
+                                                    Referencia*
                                                 </label>
                                             </div>
                                         </div>
