--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
@@ -183,7 +183,7 @@
                                     <thead>
                                         <tr>
                                             <th>Punto Venta</th>
-                                            <th>Kilogramos</th>
+                                            <th>Kilogramos/Litros</th>
                                             <th>Total ($)</th>
                                         </tr>
                                     </thead>
